# sistema_facturacion

./: .gitignore  README.md  link acceso.txt  url github.txt
cloudmusic-dte-backend-ai/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cloudmusic-dte-backend-ai/src/: __init__.py  main.py
cloudmusic-dte-backend-ai/src/api/: __init__.py  analysis.py  chat.py  system.py
cloudmusic-dte-backend-ai/src/contracts/: __init__.py  ai_types.py  document_types.py  integration_types.py  websocket_types.py
cloudmusic-dte-backend-ai/src/core/: config.py  dependencies.py  responses.py
cloudmusic-dte-backend-ai/src/services/: __init__.py  adaptive_learning_service.py  business_context_service.py  context_manager.py  conversation_analysis_module.py  data_injection_service.py  database_service.py  database_service_original.py  document_analysis_service.py  dynamic_personalization_engine.py  improvement_config.py  intelligent_response_system.py  intent_detection_service.py  long_term_memory_service.py  message_processor.py  modular_chat_service.py  mongodb_connection_manager.py  mongodb_message_manager.py  mongodb_modular_service.py  mongodb_session_manager.py  multi_agent_orchestrator.py  ollama_client.py  ollama_client_original.py  ollama_connection_manager.py  ollama_modular_client.py  ollama_prompt_builder.py  ollama_response_processor.py  postgresql_company_service.py  postgresql_connection_manager.py  postgresql_modular_service.py  postgresql_product_service.py  postgresql_service.py  postgresql_user_service.py  precision_enhancement_service.py  proactive_recommendation_engine.py  prompt_builder.py  redis_integration_service.py  redis_service.py  response_generator.py  response_quality_validator.py  (+3 more)
cloudmusic-dte-backend-ai/tests/: integration_test.py
cloudmusic-dte-backend-node/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cloudmusic-dte-backend-node/prisma/: schema.prisma
cloudmusic-dte-backend-node/src/: server.ts  trpc.ts
entrega-bases-datos/mongodb-cloudmusic-dte/: README.txt  (+5 more)
(+50 files in other folders)
